# numerical_analysis_labs

./: .gitignore  CMakeLists.txt  README.md  matrices.cpp  matrices.h
src/: lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  lab6.cpp  lab7.cpp  matrices.cpp  matrices.h  methods.cpp  methods.h
src/direct_methods/: direct_sqrt.cpp  direct_sqrt.h  sweep.cpp  sweep.h
src/integration/: function_tool.cpp  function_tool.h  gauss.cpp  gauss.h  input_data.h  simpson.cpp  simpson.h  trapez.cpp  trapez.h  trapez_spline.cpp  trapez_spline.h
src/integration/method_log/: method_info.cpp  method_info.h
src/interpolation/: cont_rms.cpp  cont_rms.h  discrete_rms.cpp  discrete_rms.h  input_data.cpp  input_data.h  newton.cpp  newton.h  spline.cpp  spline.h  uniform_approx.cpp  uniform_approx.h
src/interpolation/method_log/: method_info.cpp  method_info.h
src/iteration_methods/: calc_params.cpp  calc_params.h  conj_grad.cpp  conj_grad.h  gradient_descent.cpp  gradient_descent.h  simple_iteration.cpp  simple_iteration.h  simple_relaxation.cpp  simple_relaxation.h
src/iteration_methods/method_log/: method_info.cpp  method_info.h
src/non_lynear_systems/: calc_params.cpp  calc_params.h  gradient_descent.cpp  gradient_descent.h  input_data.cpp  input_data.h  newton_method.cpp  newton_method.h  simple_iteration.cpp  simple_iteration.h  solve_nle.cpp  solve_nle.h
src/non_lynear_systems/method_log/: method_info.cpp  method_info.h
src/ode/: heat_equation.cpp  heat_equation.h  input_data.h  runge_kutt.cpp  runge_kutt.h  shooting.cpp  shooting.h
src/ode/method_log/: method_info.cpp  method_info.h
